[package]
name = "rybyte_image_converter"
version = "0.4.0"
edition = "2021"
authors = ["RYBYTE", "Rybitva Danil Andreevich"]
license = "PolyForm Noncommercial 1.0.0"

[dependencies]
image = { version = "0.24", features = ["ico", "dds", "hdr", "farbfeld"] }
thiserror = "1.0"
ddsfile = "0.5.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
