[package]
name = "rybyte_image_converter"
version = "1.0.0"
edition = "2021"
authors = ["RYBYTE", "Rybitva Danil Andreevich"]
license = "PolyForm Noncommercial 1.0.0"

[dependencies]
image = "0.24"
mozjpeg = { version = "0.10", optional = true }
webp = { version = "0.2", optional = true }
gif = "0.12"
ddsfile = "0.5"
thiserror = "1.0"
rayon = "1.7"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["webp-encoding", "fast-jpeg"]
webp-encoding = ["webp"]
fast-jpeg = ["mozjpeg"]
